# live_plotter

./: .gitignore  CMakeLists.txt  datademonstrator.cpp  datademonstrator.h  datademonstrator.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.cpp  plot.h  plot.ui  plotter.cpp  plotter.h  plotter.ui  plotting.pro
